# PFE-EyeTracking

./: .gitignore  .~lock.data.csv#  PFE-legacy-browsers.js  PFE.js  PFE.psyexp  PFE.py  PFE_lastrun.py  README.md  data.csv  data_analyzer.ipynb  index.html  mask_ideos.ipynb  mask_videos.ipynb  objectCenter.py  pyproject.toml
Video/: ball-elongated-2.avi  ball-original.avi  ball-swept_volume.avi  spot-elongated-2.avi  spot-original.avi  spot-swept.avi
data/: 018371_PFE_2023-11-21_15h13.01.874.csv  018371_PFE_2023-11-21_15h13.01.874.psydat  093262_PFE_2023-10-25_16h38.43.959.csv  093262_PFE_2023-10-25_16h38.43.959.psydat  099533_PFE_2023-11-21_16h01.39.684.csv  099533_PFE_2023-11-21_16h01.39.684.psydat  148887_PFE_2023-11-21_16h08.04.190.csv  148887_PFE_2023-11-21_16h08.04.190.psydat  160318_PFE_2023-11-21_16h09.14.836.csv  160318_PFE_2023-11-21_16h09.14.836.psydat  163230_PFE_2023-11-21_15h04.23.525.csv  163230_PFE_2023-11-21_15h04.23.525.psydat  188563_PFE_2024-01-29_18h07.46.466.csv  188563_PFE_2024-01-29_18h07.46.466.psydat  199184_PFE_2023-10-25_16h24.37.754.csv  199184_PFE_2023-10-25_16h24.37.754.psydat  200693_PFE_2024-01-30_15h16.17.547.csv  217210_PFE_2023-11-10_13h36.01.745.csv  217210_PFE_2023-11-10_13h36.01.745.psydat  219958_PFE_2023-11-21_15h06.17.633.csv  219958_PFE_2023-11-21_15h06.17.633.psydat  226613_PFE_2023-10-25_16h42.09.692.csv  226613_PFE_2023-10-25_16h42.09.692.psydat  235827_PFE_2023-10-25_16h06.28.505.psydat  262320_PFE_2023-11-21_16h25.39.111.csv  262320_PFE_2023-11-21_16h25.39.111.psydat  267908_PFE_2023-11-21_16h22.13.710.csv  (+49 more)
(+156 files in other folders)
