[tool.poetry]
name = "pfe-eyetracking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
bokeh = "^3.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
