[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "pfe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
